<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historial_distancia1_title"
            android:textColor="@color/text_primary"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_distancia1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historial_distancia2_title"
            android:textColor="@color/text_primary"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_distancia2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historial_luz_title"
            android:textColor="@color/text_primary"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_luz"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

    </LinearLayout>
</ScrollView>
